[gd_scene load_steps=76 format=3 uid="uid://dve8qaanc0grf"]

[ext_resource type="PackedScene" uid="uid://cx68ypgcfncjn" path="res://Scenes/EnemyScenes/enemy.tscn" id="1_nrulw"]
[ext_resource type="Texture2D" uid="uid://r5g0xkhiw17a" path="res://Assets/Sprites/Explosion_animation_sprite.png" id="2_7x8fp"]
[ext_resource type="Texture2D" uid="uid://kxsapdiuwm4v" path="res://Assets/Sprites/Kamikaz.png" id="2_b1fjb"]
[ext_resource type="Script" uid="uid://dj1hqyeb6f2t1" path="res://Script/EnemyScripts/kamikaze.gd" id="3_shlsi"]
[ext_resource type="Texture2D" uid="uid://8gs258m142bt" path="res://Assets/Sprites/explosion (4).png" id="4_2d2oe"]
[ext_resource type="Script" uid="uid://br67kd68yk2s5" path="res://Addons/trail_2d/trail_2d.gd" id="5_mumnr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_shlsi"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1, 0, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1fjb"]
atlas = ExtResource("2_7x8fp")
region = Rect2(156, 0, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_mumnr"]
atlas = ExtResource("2_7x8fp")
region = Rect2(311, 0, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d2oe"]
atlas = ExtResource("2_7x8fp")
region = Rect2(466, 0, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_67xfn"]
atlas = ExtResource("2_7x8fp")
region = Rect2(621, 0, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7ds1"]
atlas = ExtResource("2_7x8fp")
region = Rect2(776, 0, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmwcb"]
atlas = ExtResource("2_7x8fp")
region = Rect2(931, 0, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p5on"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1086, 0, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nnou"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1, 154, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnr7u"]
atlas = ExtResource("2_7x8fp")
region = Rect2(156, 154, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_xifgm"]
atlas = ExtResource("2_7x8fp")
region = Rect2(311, 154, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yrpg"]
atlas = ExtResource("2_7x8fp")
region = Rect2(466, 154, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsa7f"]
atlas = ExtResource("2_7x8fp")
region = Rect2(621, 154, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_a37hj"]
atlas = ExtResource("2_7x8fp")
region = Rect2(776, 154, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i8jp"]
atlas = ExtResource("2_7x8fp")
region = Rect2(931, 154, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4ea7"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1086, 154, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv3qs"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1, 308, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivh0s"]
atlas = ExtResource("2_7x8fp")
region = Rect2(156, 308, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj8g7"]
atlas = ExtResource("2_7x8fp")
region = Rect2(311, 308, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_adb1w"]
atlas = ExtResource("2_7x8fp")
region = Rect2(466, 308, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxtpa"]
atlas = ExtResource("2_7x8fp")
region = Rect2(621, 308, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_knnlf"]
atlas = ExtResource("2_7x8fp")
region = Rect2(776, 308, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5hnt"]
atlas = ExtResource("2_7x8fp")
region = Rect2(931, 308, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_2obua"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1086, 308, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_054j3"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1, 462, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmb2u"]
atlas = ExtResource("2_7x8fp")
region = Rect2(156, 462, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6vgf"]
atlas = ExtResource("2_7x8fp")
region = Rect2(311, 462, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_og8ph"]
atlas = ExtResource("2_7x8fp")
region = Rect2(466, 462, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_en5ig"]
atlas = ExtResource("2_7x8fp")
region = Rect2(621, 462, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxqv2"]
atlas = ExtResource("2_7x8fp")
region = Rect2(776, 462, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbmgt"]
atlas = ExtResource("2_7x8fp")
region = Rect2(931, 462, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex07u"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1086, 462, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_kla3d"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1, 616, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dd4y"]
atlas = ExtResource("2_7x8fp")
region = Rect2(156, 616, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndgh3"]
atlas = ExtResource("2_7x8fp")
region = Rect2(311, 616, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sd6t"]
atlas = ExtResource("2_7x8fp")
region = Rect2(466, 616, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhrl8"]
atlas = ExtResource("2_7x8fp")
region = Rect2(621, 616, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev3gl"]
atlas = ExtResource("2_7x8fp")
region = Rect2(776, 616, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy2eu"]
atlas = ExtResource("2_7x8fp")
region = Rect2(931, 616, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjjvl"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1086, 616, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlh8t"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1, 770, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_orol3"]
atlas = ExtResource("2_7x8fp")
region = Rect2(156, 770, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl40c"]
atlas = ExtResource("2_7x8fp")
region = Rect2(311, 770, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnp3g"]
atlas = ExtResource("2_7x8fp")
region = Rect2(466, 770, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_yekxx"]
atlas = ExtResource("2_7x8fp")
region = Rect2(621, 770, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4ck8"]
atlas = ExtResource("2_7x8fp")
region = Rect2(776, 770, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_an02g"]
atlas = ExtResource("2_7x8fp")
region = Rect2(931, 770, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwgva"]
atlas = ExtResource("2_7x8fp")
region = Rect2(1086, 770, 155, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_rss7b"]
atlas = ExtResource("4_2d2oe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h5st"]
atlas = ExtResource("4_2d2oe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl71b"]
atlas = ExtResource("4_2d2oe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsahx"]
atlas = ExtResource("4_2d2oe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cnpy"]
atlas = ExtResource("4_2d2oe")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl5fu"]
atlas = ExtResource("4_2d2oe")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kke11"]
atlas = ExtResource("4_2d2oe")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvbcv"]
atlas = ExtResource("4_2d2oe")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaka3"]
atlas = ExtResource("4_2d2oe")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1olhr"]
atlas = ExtResource("4_2d2oe")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6am4u"]
atlas = ExtResource("4_2d2oe")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm8tf"]
atlas = ExtResource("4_2d2oe")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_am8yl"]
atlas = ExtResource("4_2d2oe")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lmbw"]
atlas = ExtResource("4_2d2oe")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir34l"]
atlas = ExtResource("4_2d2oe")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfbka"]
atlas = ExtResource("4_2d2oe")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rss7b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shlsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1fjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mumnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d2oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67xfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7ds1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmwcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p5on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nnou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnr7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xifgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yrpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsa7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a37hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i8jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ea7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv3qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivh0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj8g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adb1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxtpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knnlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5hnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2obua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_054j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmb2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6vgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og8ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en5ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxqv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbmgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex07u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kla3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dd4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndgh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sd6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhrl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev3gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy2eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjjvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlh8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orol3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl40c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnp3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yekxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4ck8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an02g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwgva")
}],
"loop": false,
"name": &"Explosion",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rss7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h5st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl71b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsahx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cnpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl5fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kke11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvbcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaka3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1olhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6am4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm8tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am8yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lmbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir34l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfbka")
}],
"loop": false,
"name": &"Explosion 2",
"speed": 18.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mumnr"]
radius = 22.022715

[sub_resource type="CircleShape2D" id="CircleShape2D_2d2oe"]
radius = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7x8fp"]
radius = 79.0

[sub_resource type="Gradient" id="Gradient_2d2oe"]
colors = PackedColorArray(0.9843137, 0.007843138, 0.03137255, 1, 0, 0, 0, 0)

[node name="Kamikaze" instance=ExtResource("1_nrulw")]
script = ExtResource("3_shlsi")
min_dist = 180.0
max_dist = 260.0
loot = null
base_speed = 300.0
base_damage = 20.0
base_max_hp = 30.0

[node name="DieAnimation" type="AnimatedSprite2D" parent="." index="0"]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_rss7b")
animation = &"Explosion 2"
frame = 15
frame_progress = 1.0

[node name="CollisionShape2D" parent="." index="1"]
visible = false
shape = SubResource("CircleShape2D_mumnr")

[node name="Hurtbox" parent="." index="2"]
visible = false

[node name="HurtboxShape" parent="Hurtbox" index="0"]
visible = false
shape = SubResource("CircleShape2D_2d2oe")

[node name="ExplosionRange" type="Area2D" parent="." index="3"]
collision_layer = 16
collision_mask = 2

[node name="ExplosionShape" type="CollisionShape2D" parent="ExplosionRange" index="0"]
shape = SubResource("CircleShape2D_7x8fp")

[node name="AttackCooldown" type="Timer" parent="." index="4"]

[node name="Trail2D" type="Line2D" parent="." index="5"]
z_index = -1
width = 3.0
gradient = SubResource("Gradient_2d2oe")
script = ExtResource("5_mumnr")
length = 30
metadata/_custom_type_script = "uid://br67kd68yk2s5"

[node name="Sprite2D" parent="Pivot" index="0"]
texture = ExtResource("2_b1fjb")

[connection signal="animation_finished" from="DieAnimation" to="." method="_on_die_animation_animation_finished"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="ExplosionRange" to="." method="_on_explosion_range_body_entered"]
